--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shop-on-react",
-  "homepage": "https://olmerrr.github.io/shop-on-react/",
+  "homepage": "https:/olmerrr/github.com/shop-on-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,9 +14,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
